--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/Trzmielu/todo-list/issues"
   },
-  "homepage": "https://github.com/Trzmielu/todo-list#readme"
+  "homepage": "https://github.com/Trzmielu/todo-list#readme",
+  "dependencies": {
+    "@koa/router": "^8.0.8",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0"
+  },
+  "scripts": {
+  "start": "node server/index.js"
+  }
 }
