--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "koa": "^2.11.0",
     "koa-static": "^5.0.0"
   },
-  "scripts": {
-  "start": "node server/index.js"
+  "devDependencies": {
+    "koa-logger": "^3.2.1"
   }
 }
