--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@koa/router": "^8.0.8",
     "koa": "^2.11.0",
+    "koa-favicon": "^2.1.0",
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
