--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Trzmielu/todo-list#readme",
   "dependencies": {
     "@koa/router": "^8.0.8",
+    "azure-storage": "^2.10.3",
     "koa": "^2.11.0",
     "koa-favicon": "^2.1.0",
     "koa-static": "^5.0.0"
