--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -22,3 +22,10 @@ jobs:
       with: 
         app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    - name: "Run tests"
+      uses: actions/checkout@v2
+      with:
+        ref: test
+      run: |
+        npm run test
+        
